# core_proto

./: .gitignore  Cargo.toml  build.rs
proto/: ;  builder_service.proto  category_service.proto  course_service.proto  curriculum.affiliate_model.proto  curriculum.course_event_model.proto  curriculum.course_proto_model.proto  curriculum.lesson_proto_model.proto  curriculum.quiz_model.proto  curriculum.referral_model.proto  curriculum.section_proto_model.proto  curriculum.type.proto  curriculum_service.proto  hackathon_service.proto  payment_service.proto  service.builder_service.proto  service.curriculum_service.proto  service.form_service.proto  service.hackathon_service.proto  service.mail_service.proto  service.payment_service.proto  service.tracking_service.proto  service.user_service.proto  tracking.enrollment_course.proto  tracking.tracking_management.proto  tracking_management.proto  tracking_service.proto  user_service.proto
proto/common/: form_service.proto
proto/curriculum/: affiliate_model.proto  assignments_model.proto  assistant_moderator_model.proto  comment_model.proto  course_management_model.proto  course_payment_model.proto  course_proto_model.proto  curriculum_service.proto  form_model.proto  lesson_proto_model.proto  quiz_model.proto  section_proto_model.proto  type.proto
proto/tracking/: #enrollment_course.proto#  enrollment_course.proto  tracking_management.proto  tracking_service.proto
src/: lib.rs
