[package]
name = "core_proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10.0"
prost = "0.12.1"
nanoid = "0.4.0"
chrono = "0.4.31"
serde = { version = "1.0.188", features = ["derive"] }
derive_builder = "0.12.0"

[build-dependencies]
tonic-build = { version = "0.10.0" }

[features]
default = ["all"]
all = ["user", "hackathon"]
user = []
hackathon = []
