[package]
name = "core_proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10.0"
prost = "0.12.1"
serde = { version = "1.0.188", features = ["derive"] }
derive_builder = "0.12.0"
sqlx = { version = "0.7.2", features = [
	"runtime-tokio",
	"tls-rustls",
	"postgres",
] }
utoipa = "4.2.0"

redis = { version = "0.24.0", features = ["json"] }
redis-macros = "0.3.0"
serde_json = "1.0.116"

[build-dependencies]
tonic-build = { version = "0.10.0" }

[features]
default = ["all"]
all = ["user", "hackathon","category", "curriculum", "tracking", "common", "mail", "payment"]
user = []
payment = []
hackathon = []
category = []
curriculum = []
tracking = []
common = []
mail = []
